# demoauth

./: .gitignore  README.md  database.py  env.py  pyproject.toml  server.py  users.csv
auth/: auth.py  router.py
pages/: router.py
templates/: login.html
users/: repository.py  schemas.py  utils.py
