[tool.poetry]
name = "demoauth"
version = "0.1.0"
description = ""
authors = ["Головкина Устинья Дмитриевна"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
gunicorn = "^21.2.0"
loguru = "^0.7.2"
uvloop = "^0.19.0"
httptools = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
